// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastContainer matches snapshot 1`] = `
<body>
  <div
    class="sc-gsnTZi bQKHKA"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ jAZNhq"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ cWrNHg"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ loazPe"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
  <main
    id="root"
  />
</body>
`;

exports[`ToastContainer uses inline prop 1`] = `
<body>
  <div
    class="sc-gsnTZi gRYEVl"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ jSNerL"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ fgCwHl"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ dGEkoL"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
  <main
    id="root"
  />
</body>
`;
